[gd_scene load_steps=16 format=3 uid="uid://dsbkf1co3qjwj"]

[ext_resource type="Texture2D" uid="uid://c3w3ldcr4sahc" path="res://Models/Paper_0.png" id="1_80tvu"]
[ext_resource type="Script" path="res://Scripts/Paper.gd" id="1_vmcsi"]
[ext_resource type="Shader" path="res://Shaders/Paper.gdshader" id="2_86pup"]
[ext_resource type="Texture2D" uid="uid://c0bqy2jiocvo4" path="res://Models/Paper_1.png" id="2_xpalx"]
[ext_resource type="Texture2D" uid="uid://dctu21g7hpy8n" path="res://Models/Paper_2.png" id="3_0puwf"]
[ext_resource type="Texture2D" uid="uid://c6ovmplaej7nm" path="res://Texture/Paper.png" id="5_j2hh6"]
[ext_resource type="FontFile" uid="uid://drqen5q2nrjxh" path="res://Fonts/White Colors.ttf" id="6_jknfg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_85u0j"]
render_priority = 0
shader = ExtResource("2_86pup")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/cycle_interval = 3.0
shader_parameter/shine_speed = 1.5
shader_parameter/shine_width = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ca0km"]
resource_name = "Scene_-_Root"
next_pass = SubResource("ShaderMaterial_85u0j")
cull_mode = 2
albedo_texture = ExtResource("1_80tvu")
metallic_texture = ExtResource("2_xpalx")
metallic_texture_channel = 2
roughness_texture = ExtResource("2_xpalx")
roughness_texture_channel = 1
normal_enabled = true
normal_texture = ExtResource("3_0puwf")

[sub_resource type="ArrayMesh" id="ArrayMesh_fx5cg"]
_surfaces = [{
"aabb": AABB(-54.7555, -78.9719, 0, 109.511, 79.2617, 2.5157),
"format": 34896613377,
"index_count": 180,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 3, 0, 4, 0, 2, 0, 3, 0, 5, 0, 4, 0, 5, 0, 6, 0, 4, 0, 5, 0, 7, 0, 6, 0, 7, 0, 8, 0, 6, 0, 7, 0, 9, 0, 8, 0, 9, 0, 10, 0, 8, 0, 9, 0, 11, 0, 10, 0, 11, 0, 12, 0, 10, 0, 11, 0, 13, 0, 12, 0, 13, 0, 14, 0, 12, 0, 13, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 17, 0, 21, 0, 20, 0, 17, 0, 18, 0, 21, 0, 20, 0, 23, 0, 22, 0, 20, 0, 21, 0, 23, 0, 22, 0, 25, 0, 24, 0, 22, 0, 23, 0, 25, 0, 24, 0, 27, 0, 26, 0, 24, 0, 25, 0, 27, 0, 26, 0, 29, 0, 28, 0, 26, 0, 27, 0, 29, 0, 28, 0, 31, 0, 30, 0, 28, 0, 29, 0, 31, 0, 0, 0, 17, 0, 3, 0, 0, 0, 16, 0, 17, 0, 3, 0, 20, 0, 5, 0, 3, 0, 17, 0, 20, 0, 5, 0, 22, 0, 7, 0, 5, 0, 20, 0, 22, 0, 7, 0, 24, 0, 9, 0, 7, 0, 22, 0, 24, 0, 9, 0, 26, 0, 11, 0, 9, 0, 24, 0, 26, 0, 11, 0, 28, 0, 13, 0, 11, 0, 26, 0, 28, 0, 13, 0, 30, 0, 15, 0, 13, 0, 28, 0, 30, 0, 15, 0, 31, 0, 14, 0, 15, 0, 30, 0, 31, 0, 14, 0, 29, 0, 12, 0, 14, 0, 31, 0, 29, 0, 12, 0, 27, 0, 10, 0, 12, 0, 29, 0, 27, 0, 10, 0, 25, 0, 8, 0, 10, 0, 27, 0, 25, 0, 8, 0, 23, 0, 6, 0, 8, 0, 25, 0, 23, 0, 6, 0, 21, 0, 4, 0, 6, 0, 23, 0, 21, 0, 4, 0, 18, 0, 2, 0, 4, 0, 21, 0, 18, 0, 2, 0, 19, 0, 1, 0, 2, 0, 18, 0, 19, 0, 1, 0, 16, 0, 0, 0, 1, 0, 19, 0, 16, 0),
"lods": [1.75087, PackedByteArray(0, 0, 4, 0, 1, 0, 0, 0, 5, 0, 4, 0, 5, 0, 6, 0, 4, 0, 5, 0, 7, 0, 6, 0, 7, 0, 10, 0, 6, 0, 7, 0, 13, 0, 10, 0, 13, 0, 12, 0, 10, 0, 13, 0, 14, 0, 12, 0, 13, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 17, 0, 18, 0, 21, 0, 17, 0, 21, 0, 20, 0, 20, 0, 21, 0, 23, 0, 20, 0, 23, 0, 25, 0, 20, 0, 25, 0, 24, 0, 24, 0, 25, 0, 29, 0, 24, 0, 29, 0, 28, 0, 28, 0, 29, 0, 31, 0, 28, 0, 31, 0, 30, 0, 0, 0, 17, 0, 5, 0, 0, 0, 16, 0, 17, 0, 5, 0, 17, 0, 20, 0, 5, 0, 20, 0, 7, 0, 7, 0, 20, 0, 24, 0, 7, 0, 24, 0, 28, 0, 7, 0, 28, 0, 13, 0, 13, 0, 28, 0, 30, 0, 13, 0, 30, 0, 15, 0, 15, 0, 31, 0, 14, 0, 15, 0, 30, 0, 31, 0, 14, 0, 29, 0, 12, 0, 14, 0, 31, 0, 29, 0, 12, 0, 29, 0, 10, 0, 10, 0, 29, 0, 25, 0, 10, 0, 25, 0, 23, 0, 10, 0, 23, 0, 6, 0, 6, 0, 23, 0, 21, 0, 6, 0, 21, 0, 4, 0, 4, 0, 21, 0, 18, 0, 4, 0, 18, 0, 19, 0, 4, 0, 19, 0, 1, 0, 1, 0, 16, 0, 0, 0, 1, 0, 19, 0, 16, 0), 4.65044, PackedByteArray(0, 0, 4, 0, 1, 0, 0, 0, 5, 0, 4, 0, 5, 0, 14, 0, 4, 0, 5, 0, 15, 0, 14, 0, 16, 0, 21, 0, 20, 0, 16, 0, 19, 0, 21, 0, 20, 0, 21, 0, 29, 0, 20, 0, 29, 0, 31, 0, 20, 0, 31, 0, 30, 0, 0, 0, 20, 0, 5, 0, 0, 0, 16, 0, 20, 0, 5, 0, 20, 0, 30, 0, 5, 0, 30, 0, 15, 0, 15, 0, 31, 0, 14, 0, 15, 0, 30, 0, 31, 0, 14, 0, 29, 0, 4, 0, 14, 0, 31, 0, 29, 0, 4, 0, 29, 0, 21, 0, 4, 0, 21, 0, 19, 0, 4, 0, 19, 0, 1, 0, 1, 0, 16, 0, 0, 0, 1, 0, 19, 0, 16, 0)],
"name": "Scene_-_Root",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 32,
"vertex_data": PackedByteArray(0, 0, 0, 0, 158, 134, 0, 0, 0, 0, 255, 255, 158, 134, 0, 0, 146, 36, 255, 255, 209, 245, 0, 0, 146, 36, 0, 0, 209, 245, 0, 0, 36, 73, 255, 255, 7, 171, 0, 0, 36, 73, 0, 0, 7, 171, 0, 0, 182, 109, 255, 255, 0, 0, 0, 0, 182, 109, 0, 0, 0, 0, 0, 0, 72, 146, 255, 255, 66, 81, 0, 0, 72, 146, 0, 0, 66, 81, 0, 0, 218, 182, 255, 255, 35, 73, 0, 0, 218, 182, 0, 0, 35, 73, 0, 0, 108, 219, 255, 255, 7, 221, 0, 0, 108, 219, 0, 0, 7, 221, 0, 0, 255, 255, 255, 255, 67, 104, 0, 0, 255, 255, 0, 0, 67, 104, 0, 0, 0, 0, 0, 0, 203, 144, 0, 0, 146, 36, 0, 0, 255, 255, 0, 0, 146, 36, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 203, 144, 0, 0, 36, 73, 0, 0, 52, 181, 0, 0, 36, 73, 255, 255, 52, 181, 0, 0, 182, 109, 0, 0, 45, 10, 0, 0, 182, 109, 255, 255, 45, 10, 0, 0, 72, 146, 0, 0, 111, 91, 0, 0, 72, 146, 255, 255, 111, 91, 0, 0, 218, 182, 0, 0, 80, 83, 0, 0, 218, 182, 255, 255, 80, 83, 0, 0, 108, 219, 0, 0, 52, 231, 0, 0, 108, 219, 255, 255, 52, 231, 0, 0, 255, 255, 0, 0, 112, 114, 0, 0, 255, 255, 255, 255, 112, 114, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_maotm"]
resource_name = "Sketchfab_Scene_Box001__0"
_surfaces = [{
"aabb": AABB(-54.7555, -78.9719, 0, 109.511, 79.2617, 2.5157),
"attribute_data": PackedByteArray(34, 121, 0, 207, 151, 3, 243, 206, 150, 3, 173, 183, 43, 121, 201, 183, 157, 3, 106, 160, 50, 121, 148, 160, 192, 3, 10, 137, 37, 121, 69, 137, 1, 4, 205, 113, 196, 121, 14, 114, 35, 4, 158, 90, 186, 121, 211, 90, 45, 4, 85, 67, 195, 121, 126, 67, 55, 4, 26, 44, 199, 121, 49, 44, 159, 135, 236, 203, 159, 135, 142, 181, 172, 248, 142, 181, 172, 248, 236, 203, 159, 135, 55, 159, 172, 248, 55, 159, 159, 135, 198, 136, 172, 248, 198, 136, 159, 135, 110, 114, 172, 248, 110, 114, 159, 135, 30, 92, 172, 248, 30, 92, 159, 135, 181, 69, 172, 248, 181, 69, 159, 135, 85, 47, 172, 248, 85, 47, 34, 121, 0, 207, 43, 121, 201, 183, 81, 121, 201, 183, 50, 121, 15, 207, 50, 121, 148, 160, 88, 121, 150, 160, 37, 121, 69, 137, 26, 121, 67, 137, 196, 121, 14, 114, 25, 122, 12, 114, 186, 121, 211, 90, 225, 121, 210, 90, 195, 121, 126, 67, 233, 121, 127, 67, 199, 121, 49, 44, 237, 121, 57, 44, 199, 121, 49, 44, 55, 4, 26, 44, 37, 4, 11, 44, 196, 121, 3, 44, 55, 4, 26, 44, 45, 4, 85, 67, 8, 4, 83, 67, 37, 4, 11, 44, 35, 4, 158, 90, 252, 3, 157, 90, 1, 4, 205, 113, 220, 3, 207, 113, 192, 3, 10, 137, 154, 3, 14, 137, 157, 3, 106, 160, 119, 3, 108, 160, 150, 3, 173, 183, 112, 3, 174, 183, 151, 3, 243, 206, 135, 3, 5, 207, 151, 3, 243, 206, 34, 121, 0, 207, 50, 121, 15, 207, 135, 3, 5, 207),
"format": 34896613399,
"index_count": 180,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 3, 0, 4, 0, 2, 0, 3, 0, 5, 0, 4, 0, 5, 0, 6, 0, 4, 0, 5, 0, 7, 0, 6, 0, 7, 0, 8, 0, 6, 0, 7, 0, 9, 0, 8, 0, 9, 0, 10, 0, 8, 0, 9, 0, 11, 0, 10, 0, 11, 0, 12, 0, 10, 0, 11, 0, 13, 0, 12, 0, 13, 0, 14, 0, 12, 0, 13, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 17, 0, 21, 0, 20, 0, 17, 0, 18, 0, 21, 0, 20, 0, 23, 0, 22, 0, 20, 0, 21, 0, 23, 0, 22, 0, 25, 0, 24, 0, 22, 0, 23, 0, 25, 0, 24, 0, 27, 0, 26, 0, 24, 0, 25, 0, 27, 0, 26, 0, 29, 0, 28, 0, 26, 0, 27, 0, 29, 0, 28, 0, 31, 0, 30, 0, 28, 0, 29, 0, 31, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0, 33, 0, 37, 0, 36, 0, 33, 0, 34, 0, 37, 0, 36, 0, 39, 0, 38, 0, 36, 0, 37, 0, 39, 0, 38, 0, 41, 0, 40, 0, 38, 0, 39, 0, 41, 0, 40, 0, 43, 0, 42, 0, 40, 0, 41, 0, 43, 0, 42, 0, 45, 0, 44, 0, 42, 0, 43, 0, 45, 0, 44, 0, 47, 0, 46, 0, 44, 0, 45, 0, 47, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0, 53, 0, 57, 0, 56, 0, 53, 0, 54, 0, 57, 0, 56, 0, 59, 0, 58, 0, 56, 0, 57, 0, 59, 0, 58, 0, 61, 0, 60, 0, 58, 0, 59, 0, 61, 0, 60, 0, 63, 0, 62, 0, 60, 0, 61, 0, 63, 0, 62, 0, 65, 0, 64, 0, 62, 0, 63, 0, 65, 0, 64, 0, 67, 0, 66, 0, 64, 0, 65, 0, 67, 0, 68, 0, 70, 0, 69, 0, 68, 0, 71, 0, 70, 0),
"lods": [1.75087, PackedByteArray(0, 0, 4, 0, 1, 0, 0, 0, 5, 0, 4, 0, 5, 0, 6, 0, 4, 0, 5, 0, 7, 0, 6, 0, 7, 0, 10, 0, 6, 0, 7, 0, 13, 0, 10, 0, 13, 0, 12, 0, 10, 0, 13, 0, 14, 0, 12, 0, 13, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 17, 0, 18, 0, 21, 0, 17, 0, 21, 0, 20, 0, 20, 0, 21, 0, 23, 0, 20, 0, 23, 0, 25, 0, 20, 0, 25, 0, 24, 0, 24, 0, 25, 0, 29, 0, 24, 0, 29, 0, 28, 0, 28, 0, 29, 0, 31, 0, 28, 0, 31, 0, 30, 0, 32, 0, 34, 0, 36, 0, 32, 0, 35, 0, 34, 0, 36, 0, 34, 0, 37, 0, 36, 0, 37, 0, 38, 0, 38, 0, 37, 0, 41, 0, 38, 0, 41, 0, 45, 0, 38, 0, 45, 0, 44, 0, 44, 0, 45, 0, 47, 0, 44, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0, 53, 0, 54, 0, 56, 0, 56, 0, 54, 0, 59, 0, 56, 0, 59, 0, 61, 0, 56, 0, 61, 0, 60, 0, 60, 0, 61, 0, 63, 0, 60, 0, 63, 0, 62, 0, 62, 0, 63, 0, 65, 0, 62, 0, 65, 0, 67, 0, 62, 0, 67, 0, 66, 0, 68, 0, 70, 0, 69, 0, 68, 0, 71, 0, 70, 0), 4.65044, PackedByteArray(0, 0, 4, 0, 1, 0, 0, 0, 5, 0, 4, 0, 5, 0, 14, 0, 4, 0, 5, 0, 15, 0, 14, 0, 16, 0, 21, 0, 20, 0, 16, 0, 19, 0, 21, 0, 20, 0, 21, 0, 29, 0, 20, 0, 29, 0, 31, 0, 20, 0, 31, 0, 30, 0, 32, 0, 37, 0, 36, 0, 32, 0, 35, 0, 37, 0, 36, 0, 37, 0, 47, 0, 36, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 62, 0, 52, 0, 55, 0, 54, 0, 62, 0, 54, 0, 63, 0, 62, 0, 63, 0, 67, 0, 62, 0, 67, 0, 66, 0, 68, 0, 70, 0, 69, 0, 68, 0, 71, 0, 70, 0)],
"material": SubResource("StandardMaterial3D_ca0km"),
"name": "Scene_-_Root",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 72,
"vertex_data": PackedByteArray(0, 0, 0, 0, 158, 134, 252, 253, 0, 0, 255, 255, 158, 134, 252, 253, 146, 36, 255, 255, 209, 245, 171, 255, 146, 36, 0, 0, 209, 245, 171, 255, 36, 73, 255, 255, 7, 171, 199, 253, 36, 73, 0, 0, 7, 171, 199, 253, 182, 109, 255, 255, 0, 0, 48, 255, 182, 109, 0, 0, 0, 0, 48, 255, 72, 146, 255, 255, 66, 81, 85, 255, 72, 146, 0, 0, 66, 81, 85, 255, 218, 182, 255, 255, 35, 73, 188, 254, 218, 182, 0, 0, 35, 73, 188, 254, 108, 219, 255, 255, 7, 221, 183, 255, 108, 219, 0, 0, 7, 221, 183, 255, 255, 255, 255, 255, 67, 104, 227, 253, 255, 255, 0, 0, 67, 104, 227, 253, 0, 0, 0, 0, 203, 144, 11, 192, 146, 36, 0, 0, 255, 255, 255, 191, 146, 36, 255, 255, 255, 255, 255, 191, 0, 0, 255, 255, 203, 144, 11, 192, 36, 73, 0, 0, 52, 181, 14, 192, 36, 73, 255, 255, 52, 181, 14, 192, 182, 109, 0, 0, 45, 10, 1, 192, 182, 109, 255, 255, 45, 10, 1, 192, 72, 146, 0, 0, 111, 91, 0, 192, 72, 146, 255, 255, 111, 91, 0, 192, 218, 182, 0, 0, 80, 83, 4, 192, 218, 182, 255, 255, 80, 83, 4, 192, 108, 219, 0, 0, 52, 231, 255, 191, 108, 219, 255, 255, 52, 231, 255, 191, 255, 255, 0, 0, 112, 114, 13, 192, 255, 255, 255, 255, 112, 114, 13, 192, 0, 0, 0, 0, 158, 134, 101, 207, 146, 36, 0, 0, 209, 245, 123, 212, 146, 36, 0, 0, 255, 255, 136, 208, 0, 0, 0, 0, 203, 144, 116, 205, 36, 73, 0, 0, 7, 171, 247, 46, 36, 73, 0, 0, 52, 181, 51, 212, 182, 109, 0, 0, 0, 0, 253, 43, 182, 109, 0, 0, 45, 10, 102, 44, 72, 146, 0, 0, 66, 81, 108, 214, 72, 146, 0, 0, 111, 91, 10, 44, 218, 182, 0, 0, 35, 73, 248, 213, 218, 182, 0, 0, 80, 83, 94, 214, 108, 219, 0, 0, 7, 221, 215, 211, 108, 219, 0, 0, 52, 231, 157, 213, 255, 255, 0, 0, 67, 104, 23, 209, 255, 255, 0, 0, 112, 114, 35, 211, 255, 255, 0, 0, 67, 104, 89, 213, 255, 255, 255, 255, 67, 104, 96, 213, 255, 255, 255, 255, 112, 114, 89, 213, 255, 255, 0, 0, 112, 114, 83, 213, 255, 255, 255, 255, 67, 104, 66, 207, 108, 219, 255, 255, 7, 221, 96, 212, 108, 219, 255, 255, 52, 231, 99, 208, 255, 255, 255, 255, 112, 114, 65, 205, 218, 182, 255, 255, 35, 73, 34, 213, 218, 182, 255, 255, 80, 83, 100, 212, 72, 146, 255, 255, 66, 81, 224, 214, 72, 146, 255, 255, 111, 91, 214, 213, 182, 109, 255, 255, 0, 0, 109, 215, 182, 109, 255, 255, 45, 10, 63, 215, 36, 73, 255, 255, 7, 171, 179, 214, 36, 73, 255, 255, 52, 181, 60, 215, 146, 36, 255, 255, 209, 245, 176, 219, 146, 36, 255, 255, 255, 255, 94, 214, 0, 0, 255, 255, 158, 134, 37, 224, 0, 0, 255, 255, 203, 144, 77, 221, 0, 0, 255, 255, 158, 134, 89, 213, 0, 0, 0, 0, 158, 134, 91, 213, 0, 0, 0, 0, 203, 144, 89, 213, 0, 0, 255, 255, 203, 144, 88, 213, 235, 190, 30, 65, 233, 190, 28, 65, 214, 191, 52, 64, 217, 191, 54, 64, 43, 65, 191, 190, 40, 65, 188, 190, 99, 64, 126, 191, 97, 64, 124, 191, 178, 191, 110, 64, 178, 191, 109, 64, 93, 191, 192, 64, 90, 191, 190, 64, 227, 191, 51, 64, 225, 191, 49, 64, 29, 65, 207, 190, 32, 65, 210, 190, 210, 251, 210, 251, 70, 255, 70, 255, 70, 255, 70, 255, 210, 251, 210, 251, 147, 4, 147, 4, 147, 4, 147, 4, 190, 1, 190, 1, 190, 1, 190, 1, 143, 254, 143, 254, 143, 254, 143, 254, 79, 253, 79, 253, 79, 253, 79, 253, 97, 255, 97, 255, 97, 255, 97, 255, 94, 4, 94, 4, 94, 4, 94, 4, 178, 38, 100, 205, 37, 42, 75, 212, 135, 39, 14, 207, 44, 37, 88, 202, 194, 79, 30, 88, 248, 41, 241, 211, 178, 83, 38, 86, 45, 83, 104, 86, 81, 43, 161, 214, 162, 83, 46, 86, 12, 43, 24, 214, 72, 43, 145, 214, 191, 41, 125, 211, 214, 42, 172, 213, 236, 39, 215, 207, 76, 41, 151, 210, 173, 170, 91, 85, 177, 170, 99, 85, 173, 170, 91, 85, 169, 170, 83, 85, 102, 217, 206, 50, 234, 213, 213, 43, 146, 216, 37, 49, 252, 218, 251, 53, 114, 213, 230, 42, 231, 213, 208, 43, 105, 212, 213, 40, 6, 213, 14, 42, 24, 212, 50, 40, 51, 212, 104, 40, 131, 212, 9, 41, 52, 212, 107, 40, 196, 209, 138, 35, 181, 212, 109, 41, 129, 207, 3, 31, 238, 208, 222, 33, 81, 85, 163, 170, 80, 85, 161, 170, 81, 85, 163, 170, 82, 85, 165, 170)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_fx5cg")

[sub_resource type="BoxShape3D" id="BoxShape3D_ie5bl"]
size = Vector3(254.464, 155.097, 200.65)

[sub_resource type="BoxShape3D" id="BoxShape3D_j5uob"]
size = Vector3(108.056, 11.7217, 74.6729)

[sub_resource type="CanvasTexture" id="CanvasTexture_ghepy"]
diffuse_texture = ExtResource("5_j2hh6")

[sub_resource type="FontFile" id="FontFile_654p2"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/10/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)

[node name="Paper" type="Node3D"]
transform = Transform3D(0.005, 0, 0, 0, 0.005, 0, 0, 0, 0.005, 0, 0, 0)
script = ExtResource("1_vmcsi")

[node name="PaperModel" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 2.98023e-08, -1.32349e-23, 0, 4.44089e-16, 1, 2.98023e-08, -1, 4.44089e-16, 3.94135, 2.05398e-15, -9.25049)
mesh = SubResource("ArrayMesh_maotm")
skeleton = NodePath("")

[node name="RayCast" type="StaticBody3D" parent="." groups=["InteractGroup"]]
collision_layer = 4
collision_mask = 4

[node name="InteractArea" type="Area3D" parent="RayCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 25.1804)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="RayCast/InteractArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.6017, 72.5486, 11.5154)
shape = SubResource("BoxShape3D_ie5bl")
disabled = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="RayCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.86034, 6.48242, 29.6461)
shape = SubResource("BoxShape3D_j5uob")

[node name="UI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -369.5
offset_top = -327.0
offset_right = 369.5
offset_bottom = 327.001
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="UI"]
position = Vector2(369.5, 332)
scale = Vector2(0.606409, 0.606409)
texture = SubResource("CanvasTexture_ghepy")

[node name="CloseButton" type="Button" parent="UI"]
layout_mode = 2
offset_left = 535.5
offset_top = 11.0
offset_right = 584.5
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.0809718, 0.0505585, 0.00965642, 1)
theme_override_fonts/font = SubResource("FontFile_654p2")
theme_override_font_sizes/font_size = 30
text = "X"
flat = true

[node name="Text" type="Label" parent="UI"]
layout_mode = 0
offset_left = 179.0
offset_top = 55.0
offset_right = 579.0
offset_bottom = 628.0
theme_override_colors/font_color = Color(0.033515, 0.019235, 0.00413714, 1)
theme_override_fonts/font = ExtResource("6_jknfg")
theme_override_font_sizes/font_size = 32
text = "Não sei quem vai encontrar isso, mas preciso escrever. Talvez assim as coisas fiquem mais claras pra mim também. 
Me mudei pra essa casa há algumas semanas. Sempre quis um lugar afastado, tranquilo, onde pudesse relaxar. Mas parece que não foi uma boa ideia.
Sinto que estou sendo observada o tempo todo. Não sei explicar, mas é como se alguém ou algo estivesse me vigiando. 
A cidade não gosta de falar sobre essas coisas. Parece que todo mundo sabe, mas ninguém quer comentar. Fico com a sensação de que há algo sinistro escondido por aqui.
Se você encontrou este relato, fique atento. Confie no seu instinto.
"
autowrap_mode = 3

[connection signal="body_entered" from="RayCast/InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="RayCast/InteractArea" to="." method="_on_interact_area_body_exited"]
[connection signal="pressed" from="UI/CloseButton" to="." method="_on_close_button_pressed"]
